--- a/main.html
+++ b/main.html
@@ -1,1 +1,11 @@
 <!-- Add your solution to this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My Web Page</title>
+  </head>
+  <body>
+    <h1>Welcome to my website</h1>
+    <h2>Acciojob</h2>
+  </body>
+</html>
